# car-workshop-worker-scheduler

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  main.c
docs/html/: _c_make_c_compiler_id_8c.html  annotated.html  classes.html  dir_55ef98a57036556dcc9a226e6204f780.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_de1d559ee29b9529c3eb971659538ce1.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fecfe773f908b91c373e1f72e381ab2e.html  error__handler_8c.html  error__handler_8h.html  error__handler_8h_source.html  file__handler_8c.html  file__handler_8h.html  file__handler_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  menu_8c.html  menu_8h.html  menu_8h_source.html  menu__controller_8c.html  menu__controller_8h.html  menu__controller_8h_source.html  menudata.js  schedule_8c.html  schedule_8h.html  schedule_8h_source.html  struct_defines.html  struct_service.html  struct_services.html  (+6 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  annotated.tex  dir_55ef98a57036556dcc9a226e6204f780.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  error__handler_8c.tex  (+30 more)
include/: error_handler.h  file_handler.h  menu.h  menu_controller.h  schedule.h  terminal.h  terminal_colors.h
lib/: terminal.c
src/: error_handler.c  file_handler.c  main.c  menu.c  menu_controller.c  schedule.c
(+47 files in other folders)
